Added further styling and link icons

--- a/index.html
+++ b/index.html
@@ -7,38 +7,38 @@
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <title>Temptest</title>
-  
+
   <!-- HTML -->
-  
+
 </head>
 
 <body>
   <nav>
-    <ul class="mobile__list">
-      <li><i class="fas fa-home"></i></li>
-      <li><i class="fas fa-temperature-low"></i></li>
-      <li><i class="fas fa-cog"></i></li>
+    <ul class="mobile__list style__nav">
+      <li class="list-item"><i class="fas fa-home"></i></li>
+      <li class="list-item"><i class="fas fa-temperature-low"></i></li>
+      <li class="list-item"><i class="fas fa-cog"></i></li>
     </ul>
   </nav>
-  
+
   <main>
     <card>
       <h1 class="card__header">A cool product</h1>
-      <div class="card__img"></div>
+      <div class="card__img"><img src="https://unsplash.it/300"></div>
       <p class="card__text">Some paragraph text here bois</p>
     </card>
     <card>
       <h1 class="card__header">A cool product</h1>
-      <div class="card__img"></div>
+      <div class="card__img"><img src="https://unsplash.it/300"></div>
       <p class="card__text">Some paragraph text here bois</p>
     </card>
   </main>
-  
+
   <footer>
-    <ul class="mobile__list">
-      <li>item1</li>
-      <li>item2</li>
-      <li>item3</li>
+    <ul class="mobile__list style__nav">
+      <li class="list-item style__nav"><i class="fas fa-phone"></i></li>
+      <li class="list-item style__nav"><i class="fas fa-at"></i></li>
+      <li class="list-item style__nav"><i class="far fa-share-square"></i></li>
     </ul>
   </footer>
 </body>
