using pseudo elements

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <nav>
     <ul class="mobile__list style__nav">
       <li class="list-item"><i class="fas fa-home"></i></li>
-      <li class="list-item"><i class="fas fa-temperature-low"></i></li>
+      <li class="list-item"><i class="fas fa-temperature-low company-color"></i></li>
       <li class="list-item"><i class="fas fa-cog"></i></li>
     </ul>
   </nav>
