--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <nav>
-    <ul class="mobile__list style__nav">
+    <ul class="mobile__list">
       <li class="list-item"><i class="fas fa-home"></i></li>
       <li class="list-item"><i class="fas fa-temperature-low company-color"></i></li>
       <li class="list-item"><i class="fas fa-cog"></i></li>
@@ -25,12 +25,32 @@
   <main>
     <card>
       <h1 class="card__header">A cool product</h1>
-      <div class="card__img"><img src="https://unsplash.it/300"></div>
+      <div class="card__img"><img src="https://unsplash.it/300/150"></div>
       <p class="card__text">Some paragraph text here bois</p>
     </card>
     <card>
       <h1 class="card__header">A cool product</h1>
-      <div class="card__img"><img src="https://unsplash.it/300"></div>
+      <div class="card__img"><img src="https://unsplash.it/300/150"></div>
+      <p class="card__text">Some paragraph text here bois</p>
+    </card>
+    <card>
+      <h1 class="card__header">A cool product</h1>
+      <div class="card__img"><img src="https://unsplash.it/300/150"></div>
+      <p class="card__text">Some paragraph text here bois</p>
+    </card>
+    <card>
+      <h1 class="card__header">A cool product</h1>
+      <div class="card__img"><img src="https://unsplash.it/300/150"></div>
+      <p class="card__text">Some paragraph text here bois</p>
+    </card>
+    <card>
+      <h1 class="card__header">A cool product</h1>
+      <div class="card__img"><img src="https://unsplash.it/300/150"></div>
+      <p class="card__text">Some paragraph text here bois</p>
+    </card>
+    <card>
+      <h1 class="card__header">A cool product</h1>
+      <div class="card__img"><img src="https://unsplash.it/300/150"></div>
       <p class="card__text">Some paragraph text here bois</p>
     </card>
   </main>
