added captions and better mobile grid alignment

--- a/index.html
+++ b/index.html
@@ -23,44 +23,45 @@
   </nav>
 
   <main>
-    <card>
-      <h1 class="card__header">A cool product</h1>
-      <div class="card__img"><img src="https://unsplash.it/300/150"></div>
-      <p class="card__text">Some paragraph text here bois</p>
-    </card>
-    <card>
-      <h1 class="card__header">A cool product</h1>
-      <div class="card__img"><img src="https://unsplash.it/300/150"></div>
-      <p class="card__text">Some paragraph text here bois</p>
-    </card>
-    <card>
-      <h1 class="card__header">A cool product</h1>
-      <div class="card__img"><img src="https://unsplash.it/300/150"></div>
-      <p class="card__text">Some paragraph text here bois</p>
-    </card>
-    <card>
-      <h1 class="card__header">A cool product</h1>
-      <div class="card__img"><img src="https://unsplash.it/300/150"></div>
-      <p class="card__text">Some paragraph text here bois</p>
-    </card>
-    <card>
-      <h1 class="card__header">A cool product</h1>
-      <div class="card__img"><img src="https://unsplash.it/300/150"></div>
-      <p class="card__text">Some paragraph text here bois</p>
-    </card>
-    <card>
-      <h1 class="card__header">A cool product</h1>
-      <div class="card__img"><img src="https://unsplash.it/300/150"></div>
-      <p class="card__text">Some paragraph text here bois</p>
-    </card>
-  </main>
-
-  <footer>
-    <ul class="mobile__list style__nav">
-      <li class="list-item style__nav"><i class="fas fa-phone"></i></li>
-      <li class="list-item style__nav"><i class="fas fa-at"></i></li>
-      <li class="list-item style__nav"><i class="far fa-share-square"></i></li>
-    </ul>
-  </footer>
+    <features>
+      <card>
+        <h1 class="card__header">Sensors</h1>
+        <img class="card__img" src="https://unsplash.it/300/150">
+        <p class="card__text">Some paragraph text here bois</p>
+      </card>
+      <card>
+        <h1 class="card__header">Thermowells, Fittings & Transistors</h1>
+        <img class="card__img" src="https://unsplash.it/300/150">
+        <p class="card__text">Some paragraph text here bois</p>
+      </card>
+      <card>
+        <h1 class="card__header">Cable</h1>
+        <div class="card__img"><img src="https://unsplash.it/300/150"></div>
+        <p class="card__text">Some paragraph text here bois</p>
+      </card>
+      <card>
+        <h1 class="card__header">Instrumentation</h1>
+        <div class="card__img"><img src="https://unsplash.it/300/150"></div>
+        <p class="card__text">Some paragraph text here bois</p>
+      </card>
+      <card>
+        <h1 class="card__header">Connectors</h1>
+        <div class="card__img"><img src="https://unsplash.it/300/150"></div>
+        <p class="card__text">Some paragraph text here bois</p>
+      </card>
+      <card>
+        <h1 class="card__header">Technical Stuff</h1>
+        <div class="card__img"><img src="https://unsplash.it/300/150"></div>
+        <p class="card__text">Some paragraph text here bois</p>
+      </card>
+    </main>
+    <footer>
+      <ul class="mobile__list style__nav">
+        <li class="list-item style__nav"><i class="fas fa-phone"></i></li>
+        <li class="list-item style__nav"><i class="fas fa-at"></i></li>
+        <li class="list-item style__nav"><i class="far fa-share-square"></i></li>
+      </ul>
+    </footer>
+  </features>
 </body>
 </html>
