--- a/index.html
+++ b/index.html
@@ -4,64 +4,95 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://fonts.googleapis.com/css?family=Gentium+Basic|Rubik&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+  <link rel="stylesheet" href="material-design-helpers.css">
   <title>Temptest</title>
 
-  <!-- HTML -->
-
 </head>
-
 <body>
-  <nav>
-    <ul class="mobile__list">
-      <li class="list-item"><i class="fas fa-home"></i></li>
-      <li class="list-item"><i class="fas fa-temperature-low company-color"></i></li>
-      <li class="list-item"><i class="fas fa-cog"></i></li>
-    </ul>
-  </nav>
-
-  <main>
-    <features>
-      <card>
-        <h1 class="card__header">Sensors</h1>
-        <img class="card__img" src="https://unsplash.it/300/150">
-        <p class="card__text">Some paragraph text here bois</p>
-      </card>
-      <card>
-        <h1 class="card__header">Thermowells, Fittings & Transistors</h1>
-        <img class="card__img" src="https://unsplash.it/300/150">
-        <p class="card__text">Some paragraph text here bois</p>
-      </card>
-      <card>
-        <h1 class="card__header">Cable</h1>
-        <div class="card__img"><img src="https://unsplash.it/300/150"></div>
-        <p class="card__text">Some paragraph text here bois</p>
-      </card>
-      <card>
-        <h1 class="card__header">Instrumentation</h1>
-        <div class="card__img"><img src="https://unsplash.it/300/150"></div>
-        <p class="card__text">Some paragraph text here bois</p>
-      </card>
-      <card>
-        <h1 class="card__header">Connectors</h1>
-        <div class="card__img"><img src="https://unsplash.it/300/150"></div>
-        <p class="card__text">Some paragraph text here bois</p>
-      </card>
-      <card>
-        <h1 class="card__header">Technical Stuff</h1>
-        <div class="card__img"><img src="https://unsplash.it/300/150"></div>
-        <p class="card__text">Some paragraph text here bois</p>
-      </card>
+    <menu id="menu">
+      <ul id="menu-list">
+        <li><a href="index.html">Home</a></li>
+        <li class="collapsable">Products
+          <ul>
+            <li><a href="#">Sensors</a></li>
+            <li><a href="#">Thermowells, Fittngs & Transistors</a></li>
+            <li><a href="#">Cable</a></li>
+            <li><a href="#">Instrumentation</a></li>
+            <li><a href="#">Connectors</a></li>
+            <li><a href="#">Technical Stuff</a></li>
+          </ul>
+        </li>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">News</a></li>
+      </ul>
+    </menu>
+    <main>
+      <header>
+          <ul class="nav">
+            <a id="menu-button" onclick="toggleNavigationMenu()">
+              <li class="list-item burger">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bar-chart"><line x1="12" y1="20" x2="12" y2="10"/><line x1="18" y1="20" x2="18" y2="4"/><line x1="6" y1="20" x2="6" y2="16"/></svg>
+                <span id="menu-help-text">Menu</span>
+              </li></a>
+            <a href="index.html"><li class="list-item"><i class="fas fa-temperature-low company-color"></i></li></a>
+          </ul>
+        </header>
+      <features>
+        <a class="hide-link" href="#">
+          <card class="material-shadow">
+              <h2 class="card__header">Sensors</h2>
+              <img class="card__img" src="img/sensors.png">
+              <p class="card__text">View Products</p>
+          </card>
+        </a>
+        <a class="hide-link"href="#">
+          <card class="material-shadow">
+            <h2 class="card__header">Thermowells, Fittings & Transistors</h2>
+            <img class="card__img" src="img/thermowellsfittingstransmitters.png">
+            <p class="card__text">View Products</p>
+          </card>
+        </a>
+        <a href="#" class="hide-link">
+          <card class="material-shadow">
+            <h2 class="card__header">Cable</h2>
+            <img class="card__img" src="img/cables.png">
+            <p class="card__text">View Products</p>
+          </card>
+        </a>
+        <a href="#" class="hide-link">
+          <card class="material-shadow">
+            <h2 class="card__header">Instrumentation</h2>
+            <img class="card__img" src="img/instrumentation.png">
+            <p class="card__text">View Products</p>
+          </card>
+        </a>
+        <a href="#" class="hide-link">
+          <card class="material-shadow">
+            <h2 class="card__header">Connectors</h2>
+            <img class="card__img" src="img/connectors.png">
+            <p class="card__text">View Products</p>
+          </card>
+        </a>
+        <a href="#" class="hide-link">
+          <card class="material-shadow">
+            <h2 class="card__header">Technical Stuff</h2>
+            <img src="https://unsplash.it/300/150">
+            <p class="card__text">More Information</p>
+          </card>
+        </a>
+      </main>
+    </features>
     </main>
     <footer>
-      <ul class="mobile__list style__nav">
-        <li class="list-item style__nav"><i class="fas fa-phone"></i></li>
-        <li class="list-item style__nav"><i class="fas fa-at"></i></li>
-        <li class="list-item style__nav"><i class="far fa-share-square"></i></li>
-      </ul>
+        <ul class="nav">
+          <li class="list-item style__nav"><i class="fas fa-phone"></i></li>
+          <li class="list-item style__nav"><i class="fas fa-at"></i></li>
+          <li class="list-item style__nav"><i class="far fa-share-square"></i></li>
+        </ul>
     </footer>
-  </features>
+<script src="script.js"></script>
 </body>
 </html>
