more mobile menu styling

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <body>
     <menu id="menu">
       <ul id="menu-list">
-        <li><a href="index.html">Home</a></li>
-        <li class="collapsable">Products
+        <li><a href="index.html"><i class="fas fa-igloo"></i>Home</a></li>
+        <li class="collapsable"><i class="fas fa-tools"></i>Products
           <ul>
-            <li><a href="#">Sensors</a></li>
+            <li><a href="sensors.html">Sensors</a></li>
             <li><a href="#">Thermowells, Fittngs & Transistors</a></li>
             <li><a href="#">Cable</a></li>
             <li><a href="#">Instrumentation</a></li>
@@ -25,8 +25,8 @@
             <li><a href="#">Technical Stuff</a></li>
           </ul>
         </li>
-        <li><a href="#">About Us</a></li>
-        <li><a href="#">News</a></li>
+        <li><a href="about.html"><i class="fas fa-address-card"></i>About Us</a></li>
+        <li><a href="#"><i class="fas fa-newspaper"></i>News</a></li>
       </ul>
     </menu>
     <main>
