--- a/404.html
+++ b/404.html
@@ -4,8 +4,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="css/fonts.css">
+    <style>
+        body {
+            font-family: "Rubik", sans-serif;
+            font-display: fallback;
+            background-color: whitesmoke;
+            width: 100vw;
+            height: 100vh;
+        }
+        main {
+            display: grid;
+            width: 100%;
+            height: 100%;
+            margin: 0 auto;
+            place-content: center;
+        }
+        ul {
+            display: grid;
+            grid-gap: 1rem;
+            list-style-type: circle;
+        }
+    </style>
 </head>
 <body>
-    This page has not yet been implemented.
+    <main>
+        <h1>Error 404</h1>
+        <p>This page has not been implemented.</p>
+        <p>The following pages have been implemented:</p>
+        <ul>
+            <li>root/index.html (home page)</li>
+            <li>root/sensors.html (a products page)</li>
+            <li>root/aboutus.html (an about page)</li>
+            <li>root/contact.html (a contact page)</li>
+        </ul>
+    </main>
 </body>
 </html>
