--- a/index.html
+++ b/index.html
@@ -1,71 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Testemp Ltd: a UK distributor for Brainchild’s range. Concentrating in two products in particular, the BTC-901 and BTC-404 have grown to become regular products to a wide variety of industries.">
+  <meta name="keywords" content="Brainchild, Brainchild's, brainchilds, Brainchilds, digital analogue controller, BTC-901, basic analogue controller, about analogue controllers, about temperature sensors, how sensors work">
   <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+    integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" href="css/misc.css">
-  <link rel="stylesheet" href="css/smallDevice.css">
   <link rel="stylesheet" href="css/xSmallDevice.css">
+  <link rel="stylesheet" href="css/smallDevice.css">
+  <link rel="stylesheet" href="css/mediumDevicePlus.css">
   <link rel="stylesheet" href="css/fonts.css">
   <link rel="stylesheet" href="css/menuTransformation.css">
   <link rel="stylesheet" href="css/material-design-helpers.css">
-  <title>Home - Temptest</title>
+  <title>Home - Testemp</title>
 </head>
+
 <body>
-    <menu id="menu">
-      <div id="menu-hide">
-        <a href="javascript:void(0)" onclick="resetMainClass()"><i class="fas fa-times-circle"></i></a>
-      </div>
-      <ul id="menu-list">
-        <li><a href="index.html"><i class="fas fa-igloo"></i>Home</a></li>
-        <li class="collapsable"><i class="fas fa-chevron-down"></i>Products
-          <ul>
-            <li><a href="sensors.html">Sensors</a></li>
-            <li><a href="tft.html">Thermowells, Fittngs & Transistors</a></li>
-            <li><a href="#">Cable</a></li>
-            <li><a href="#">Instrumentation</a></li>
-            <li><a href="#">Connectors</a></li>
-            <li><a href="#">Technical Stuff</a></li>
-          </ul>
-        </li>
-        <li><a href="about.html"><i class="fas fa-address-card"></i>About Us</a></li>
-        <li><a href="#"><i class="fas fa-newspaper"></i>News</a></li>
-      </ul>
-    </menu>
+  <menu id="menu">
+    <div aria-label="Close" id="menu-hide">
+      <a href="javascript:void(0)" onclick="resetMainClass()"><i aria-hidden="true" class="fas fa-times-circle"></i></a>
+    </div>
+    <ul id="menu-list">
+      <li><a href="index.html"><i aria-hidden="true" class="fas fa-igloo"></i>Home</a></li>
+      <li class="collapsable"><i aria-hidden="true" class="fas fa-chevron-down"></i>Products
+        <ul>
+          <li><a href="sensors.html">Sensors</a></li>
+          <li><a href="404.html">Thermowells, Fittngs & Transistors</a></li>
+          <li><a href="404.html">Cable</a></li>
+          <li><a href="404.html">Instrumentation</a></li>
+          <li><a href="404.html">Connectors</a></li>
+          <li><a href="404.html">Technical Stuff</a></li>
+        </ul>
+      </li>
+      <li><a href="aboutus.html"><i aria-hidden="true" class="fas fa-address-card"></i>About Us</a></li>
+      <li><a href="contact.html"><i aria-hidden="true" class="fas fa-at"></i>Contact Us</a></li>
+      <li><a href="404.html"><i aria-hidden="true" class="fas fa-newspaper"></i>News</a></li>
+    </ul>
+  </menu>
   <main>
     <header>
       <ul class="nav">
-        <a id="menu-button" onclick="toggleNavigationMenu()">
-          <li class="list-item burger">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bar-chart"><line x1="12" y1="20" x2="12" y2="10"/><line x1="18" y1="20" x2="18" y2="4"/><line x1="6" y1="20" x2="6" y2="16"/></svg>
+        <li class="list-item burger">
+          <a id="menu-button" onclick="toggleNavigationMenu()">
+            <svg aria-label="Company Logo" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+              stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+              class="feather feather-bar-chart">
+              <line x1="12" y1="20" x2="12" y2="10" />
+              <line x1="18" y1="20" x2="18" y2="4" />
+              <line x1="6" y1="20" x2="6" y2="16" /></svg>
             <span id="menu-help-text">Menu</span>
-          </li></a>
-        <a href="index.html"><li class="list-item"><i class="fas fa-temperature-low company-color"></i></li></a>
+          </a>
+        </li>
+        <li class="list-item"><a href="index.html"><img src="img/new-logosvg.svg" alt="Testemp Logo"
+              style="height: 3rem;"></a></li>
+        <li><h1>Home</h1></li>
       </ul>
     </header>
     <features>
       <a class="hide-link" href="sensors.html">
         <card class="material-shadow">
-            <h2 class="card__header">Sensors</h2>
-            <img class="card__img" srcset="
+          <h2 class="card__header">Sensors</h2>
+          <img class="card__img" srcset="
               img/sensors/sensors-low.jpg 200w,
-              img/sensors/sensors-high.jpg 300w"
-              src="img/sensors/sensors-low.jpg">
-            <p class="card__text">View Products</p>
+              img/sensors/sensors-high.jpg 300w" src="img/sensors/sensors-low.jpg" alt="Sensors">
+          <p aria-hidden="true" class="card__text">View Products</p>
         </card>
       </a>
-      <a class="hide-link"href="#">
+      <a class="hide-link" href="#">
         <card class="material-shadow">
           <h2 class="card__header">Thermowells, Fittings & Transistors</h2>
           <img class="card__img" srcset="
           img/tft/tft-low.jpg 200w,
-          img/tft/tft-high.jpg 300w"
-          src="img/tft/tft-low.jpg" alt="Thermowells, fittings and transistors">
-          <p class="card__text">View Products</p>
+          img/tft/tft-high.jpg 300w" src="img/tft/tft-low.jpg" alt="Thermowells, fittings and transistors">
+          <p aria-hidden="true" class="card__text">View Products</p>
         </card>
       </a>
       <a href="#" class="hide-link">
@@ -73,9 +85,8 @@
           <h2 class="card__header">Cable</h2>
           <img class="card__img" srcset="
           img/cables/cables-low.jpg 200w,
-          img/cables/cables-high.jpg 300w"
-          src="img/cables/cables-low.jpg" alt="Electrical cables" >
-          <p class="card__text">View Products</p>
+          img/cables/cables-high.jpg 300w" src="img/cables/cables-low.jpg" alt="Electrical cables">
+          <p aria-hidden="true" class="card__text">View Products</p>
         </card>
       </a>
       <a href="#" class="hide-link">
@@ -83,9 +94,8 @@
           <h2 class="card__header">Instrumentation</h2>
           <img class="card__img" srcset="
           img/instrum/instrum-low.jpg 200w,
-          img/instrum/instrum-high.jpg 300w"
-          src="img/instrum/instrum-low.jpg" alt="Electric instrumentation">
-          <p class="card__text">View Products</p>
+          img/instrum/instrum-high.jpg 300w" src="img/instrum/instrum-low.jpg" alt="Electric instrumentation">
+          <p aria-hidden="true" class="card__text">View Products</p>
         </card>
       </a>
       <a href="#" class="hide-link">
@@ -93,33 +103,32 @@
           <h2 class="card__header">Connectors</h2>
           <img class="card__img" srcset="
           img/connectors/connectors-low.jpg 200w,
-          img/connectors/connectors-high.jpg 300w"
-          src="img/connectors/connectors-low.jpg" alt="Connectors">
-          <p class="card__text">View Products</p>
+          img/connectors/connectors-high.jpg 300w" src="img/connectors/connectors-low.jpg" alt="Connectors">
+          <p aria-hidden="true" class="card__text">View Products</p>
         </card>
       </a>
       <a href="#" class="hide-link">
         <card class="material-shadow">
           <h2 class="card__header">Technical Stuff</h2>
           <img id="svgInfo" src="img/incon-finder-info.svg" alt="Technical information">
-          <p class="card__text">More Information</p>
+          <p aria-hidden="true" class="card__text">More Information</p>
         </card>
       </a>
-    </main>
-    </features>
-    </main>
-    <footer>
-        <ul class="footer-list">
-          <li class="footer-list-item"><i class="fas fa-phone"></i>
-            <span>Call: +44 (0) 1903 714140</span>
-            <span>Fax: +44 (0) 1903 717435</span>
-          </li>
-          <li class="footer-list-item"><i class="fas fa-at"></i>
-            <span>Email: <a href="mailto:sales@testemp.co.uk">sales@testemp.co.uk</a></span>
-          </li>
-          <li class="footer-list-item share-button" onclick="mobileShareDialog()"><i class="far fa-share-square"></i><span>Share this page</span></li>
-        </ul>
-    </footer>
-<script src="scripts/script.js"></script>
+  </features>
+  </main>
+  <footer>
+    <ul class="footer-list">
+      <li class="footer-list-item"><i aria-hidden="true" class="fas fa-phone"></i>
+        <span>Call: +44 (0) 1903 714140</span>
+        <span>Fax: +44 (0) 1903 717435</span>
+      </li>
+      <li class="footer-list-item"><i aria-hidden="true" class="fas fa-at"></i>
+        <span>Email: <a href="mailto:sales@testemp.co.uk">sales@testemp.co.uk</a></span>
+      </li>
+      <li id="mobileShareButton" class="footer-list-item" onclick="mobileShareDialog()"><i
+          class="far fa-share-square"></i><span>Share this page</span></li>
+    </ul>
+  </footer>
+  <script src="scripts/script.js"></script>
 </body>
 </html>
