--- a/sensors.html
+++ b/sensors.html
@@ -4,49 +4,126 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Testemp's range of sensors including Air, Surface, Bayonet, Plastic, Hand-held and Tubular sensors. ">
+  <meta name="keywords" content="Air, Surface, Bayonet, Plastic, Hand-held, Tubular, sensor, sensors, datalogger, temperature sensor, humidity, thermocouple">
+  <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" href="css/misc.css">
-  <link rel="stylesheet" href="css/smallDevice.css">
   <link rel="stylesheet" href="css/xSmallDevice.css">
+  <link rel="stylesheet" href="css/smallDevice.css">
+  <link rel="stylesheet" href="css/mediumDevicePlus.css">
   <link rel="stylesheet" href="css/fonts.css">
   <link rel="stylesheet" href="css/menuTransformation.css">
   <link rel="stylesheet" href="css/material-design-helpers.css">
-  <title>Sensors - TestTemp</title>
+  <title>Sensors - Testemp</title>
 </head>
 <body>
   <menu id="menu">
-    <div id="menu-hide">
-        <a href="javascript:void(0)" onclick="resetMainClass()"><i class="fas fa-times-circle"></i></a>
+    <div aria-label="Close"id="menu-hide">
+      <a href="javascript:void(0)" onclick="resetMainClass()"><i aria-hidden="true" class="fas fa-times-circle"></i></a>
     </div>
     <ul id="menu-list">
-      <li><a href="index.html"><i class="fas fa-igloo"></i>Home</a></li>
-      <li class="collapsable"><i class="fas fa-chevron-down"></i>Products
-        <ul>
-          <li><a href="sensors.html">Sensors</a></li>
-          <li><a href="#">Thermowells, Fittngs & Transistors</a></li>
-          <li><a href="#">Cable</a></li>
-          <li><a href="#">Instrumentation</a></li>
-          <li><a href="#">Connectors</a></li>
-          <li><a href="#">Technical Stuff</a></li>
-        </ul>
-      </li>
-      <li><a href="about.html"><i class="fas fa-address-card"></i>About Us</a></li>
-      <li><a href="#"><i class="fas fa-newspaper"></i>News</a></li>
+        <li><a href="index.html"><i aria-hidden="true" class="fas fa-igloo"></i>Home</a></li>
+        <li class="collapsable"><i aria-hidden="true" class="fas fa-chevron-down"></i>Products
+          <ul>
+            <li><a href="sensors.html">Sensors</a></li>
+            <li><a href="404.html">Thermowells, Fittngs & Transistors</a></li>
+            <li><a href="404.html">Cable</a></li>
+            <li><a href="404.html">Instrumentation</a></li>
+            <li><a href="404.html">Connectors</a></li>
+            <li><a href="404.html">Technical Stuff</a></li>
+          </ul>
+        </li>
+        <li><a href="aboutus.html"><i aria-hidden="true" class="fas fa-address-card"></i>About Us</a></li>
+        <li><a href="contact.html"><i aria-hidden="true" class="fas fa-at"></i>Contact Us</a></li>
+        <li><a href="404.html"><i aria-hidden="true" class="fas fa-newspaper"></i>News</a></li>
     </ul>
   </menu>
   <main>
-      <header>
-        <ul class="nav">
+    <header>
+      <ul class="nav">
+        <li class="list-item burger">
           <a id="menu-button" onclick="toggleNavigationMenu()">
-            <li class="list-item burger">
-              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bar-chart"><line x1="12" y1="20" x2="12" y2="10"/><line x1="18" y1="20" x2="18" y2="4"/><line x1="6" y1="20" x2="6" y2="16"/></svg>
-              <span id="menu-help-text">Menu</span>
-            </li></a>
-          <a href="index.html"><li class="list-item"><i class="fas fa-temperature-low company-color"></i></li></a>
-        </ul>
-      </header>
+            <svg aria-label="Company Logo" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bar-chart"><line x1="12" y1="20" x2="12" y2="10"/><line x1="18" y1="20" x2="18" y2="4"/><line x1="6" y1="20" x2="6" y2="16"/></svg>
+            <span id="menu-help-text">Menu</span>
+          </a>
+        </li>
+        <li class="list-item"><a href="index.html"><img src="img/new-logosvg.svg" alt="Testemp Logo" style="height: 3rem;"></a></li>
+        <li><h1>Sensors</h1></li>
+      </ul>
+    </header>
+    <features>
+      <a class="hide-link" href="404.html">
+        <card class="material-shadow">
+          <h2 class="card__header">Surface</h2>
+          <img class="card__img" srcset="
+                img/sensors/sensors-low.jpg 200w,
+                img/sensors/sensors-high.jpg 300w" src="img/sensors/sensors-low.jpg">
+          <p aria-hidden="true" class="card__text">View Surface Sensors</p>
+        </card>
+      </a>
+      <a class="hide-link" href="404.html">
+        <card class="material-shadow">
+          <h2 class="card__header">Bayonet</h2>
+          <img class="card__img" srcset="
+                img/sensors/sensors-low.jpg 200w,
+                img/sensors/sensors-high.jpg 300w" src="img/sensors/sensors-low.jpg">
+          <p aria-hidden="true" class="card__text">View Bayonet Sensors</p>
+        </card>
+      </a>
+      <a class="hide-link" href="404.html">
+        <card class="material-shadow">
+          <h2 class="card__header">Plastics</h2>
+          <img class="card__img" srcset="
+                img/sensors/sensors-low.jpg 200w,
+                img/sensors/sensors-high.jpg 300w" src="img/sensors/sensors-low.jpg">
+          <p aria-hidden="true" class="card__text">View Plastics</p>
+        </card>
+      </a>
+      <a class="hide-link" href="404.html">
+        <card class="material-shadow">
+          <h2 class="card__header">Tubular</h2>
+          <img class="card__img" srcset="
+                img/sensors/sensors-low.jpg 200w,
+                img/sensors/sensors-high.jpg 300w" src="img/sensors/sensors-low.jpg">
+          <p aria-hidden="true" class="card__text">View Tubular Sensors</p>
+        </card>
+      </a>
+      <a class="hide-link" href="404.html">
+        <card class="material-shadow">
+          <h2 class="card__header">Hand Held</h2>
+          <img class="card__img" srcset="
+                img/sensors/sensors-low.jpg 200w,
+                img/sensors/sensors-high.jpg 300w" src="img/sensors/sensors-low.jpg">
+          <p aria-hidden="true" class="card__text">View Hand Held Sensors</p>
+        </card>
+      </a>
+      <a class="hide-link" href="404.html">
+        <card class="material-shadow">
+          <h2 class="card__header">Air</h2>
+          <img class="card__img" srcset="
+                img/sensors/sensors-low.jpg 200w,
+                img/sensors/sensors-high.jpg 300w" src="img/sensors/sensors-low.jpg">
+          <p aria-hidden="true" class="card__text">View Air Sensors</p>
+        </card>
+      </a>
+    </features>
   </main>
-
+  <footer>
+    <ul class="footer-list">
+      <li class="footer-list-item"><i aria-hidden="true" class="fas fa-phone"></i>
+        <span>Call: +44 (0) 1903 714140</span>
+        <span>Fax: +44 (0) 1903 717435</span>
+      </li>
+      <li class="footer-list-item"><i aria-hidden="true" class="fas fa-at"></i>
+        <span>Email: <a href="mailto:sales@testemp.co.uk">sales@testemp.co.uk</a></span>
+      </li>
+      <li id ="mobileShareButton" class="footer-list-item" onclick="mobileShareDialog()"><i
+          class="far fa-share-square"></i><span>Share this page</span></li>
+    </ul>
+  </footer>
+<script src="scripts/script.js"></script>
+</body>
 <script src="scripts/script.js"></script>
 </body>
 </html>
