Error page meta and aria tags

--- a/404.html
+++ b/404.html
@@ -3,7 +3,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <meta name="robots" content="noindex, nofollow">
+    <title>Error 404</title>
     <link rel="stylesheet" href="css/fonts.css">
     <style>
         body {
@@ -32,11 +33,11 @@
         <h1>Error 404</h1>
         <p>This page has not been implemented.</p>
         <p>The following pages have been implemented:</p>
-        <ul>
-            <li>root/index.html (home page)</li>
-            <li>root/sensors.html (a products page)</li>
-            <li>root/aboutus.html (an about page)</li>
-            <li>root/contact.html (a contact page)</li>
+        <ul aria-label="Implemented pages">
+            <li><a href="index.html">/index.html</a> (home page)</li>
+            <li><a href="sensors.html">/sensors.html</a> (a products page)</li>
+            <li>/aboutus.html (an about page)</li>
+            <li>/contact.html (a contact page)</li>
         </ul>
     </main>
 </body>
