Added links to Error page

--- a/404.html
+++ b/404.html
@@ -36,8 +36,8 @@
         <ul aria-label="Implemented pages">
             <li><a href="index.html">/index.html</a> (home page)</li>
             <li><a href="sensors.html">/sensors.html</a> (a products page)</li>
-            <li>/aboutus.html (an about page)</li>
-            <li>/contact.html (a contact page)</li>
+            <li><a href="aboutus.html">/aboutus.html</a> (an about page)</li>
+            <li><a href="contact.html">/contact.html</a> (a contact page)</li>
         </ul>
     </main>
 </body>
